--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -5,5 +5,29 @@
   "show_device_preview": "Show Device Preview",
   "overlap_sub_menu": "Overlap Sub Menu",
   "change_locale": "Change Locale",
-  "current_locale": "Current Locale"
+  "current_locale": "Current Locale",
+  "pleaseWaitSendingData": "Please wait, sending data..",
+  "pleaseWaitFetchingData": "Please wait, fetching data..",
+  "enterYourDetails": "Enter Your Details",
+  "thisInfoLetsProvidersGiveMoreHelpfulNpersonalizedExperience": "This info lets providers give more helpful, \npersonalized experience",
+  "firstName": "FIRST NAME",
+  "enterFirstName": "Enter first name",
+  "middleName": "MIDDLE NAME",
+  "enterMiddleNameOptional": "Enter middle name (Optional)",
+  "lastName": "LAST NAME",
+  "enterLastName": "Enter last name",
+  "dateOfBirth": "DATE OF BIRTH",
+  "selectDateOfBirth": "Select date of birth",
+  "gender": "GENDER",
+  "contactNumber": "CONTACT NUMBER",
+  "eg971233456789": "e.g. +971 23 345 6789",
+  "emailAddress": "EMAIL ADDRESS",
+  "enterEmailAddress": "Enter email address",
+  "pleaseEnterValidEmailAddress": "Please enter valid email address",
+  "noQuestionsAdded": "No Questions Added",
+  "pleaseProvideResponseToAllTheMandatoryFields": "Please provide response to all the mandatory fields",
+  "submit": "Submit",
+  "formResponseSuccessfullySent": "Form Response Successfully Sent",
+  "clickOnThePatientToContinueForward": "Click on the patient to continue forward",
+  "multipleDataPresent": "Multiple Data Present"
 }
